--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,24 @@
 {
-    "name": "hypario/stormbox",
-    "authors": [
-        {
-            "name": "Hypario",
-            "email": "fabienduterte@mailfence.com"
-        }
-    ],
-    "autoload": {
-        "psr-4": {
-            "Hypario\\": "src/"
-        }
-    },
-    "require": {
-        "hypario/router": "^1.3",
-        "http-interop/response-sender": "^1.0",
-        "guzzlehttp/psr7": "^1.6",
-        "php-di/php-di": "^6.0",
-        "middlewares/whoops": "^1.2",
-        "ext-json": "*",
-        "ext-pdo": "*"
+  "name": "hypario/stormbox",
+  "authors": [
+    {
+      "name": "Hypario",
+      "email": "fabienduterte@mailfence.com"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Hypario\\": "src/"
+    }
+  },
+  "require": {
+    "hypario/router": "^1.3",
+    "http-interop/response-sender": "^1.0",
+    "guzzlehttp/psr7": "^1.6",
+    "php-di/php-di": "^6.0",
+    "middlewares/whoops": "^1.2",
+    "ext-json": "*",
+    "ext-pdo": "*",
+    "ext-zip": "*"
+  }
 }
