--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "middlewares/whoops": "^1.2",
     "ext-json": "*",
     "ext-pdo": "*",
-    "ext-zip": "*"
+    "ext-zip": "*",
+    "robmorgan/phinx": "^0.10.8"
   }
 }
