--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,25 @@
   "autoload": {
     "psr-4": {
       "App\\": "src/",
-      "Framework\\": "src/Framework"
+      "Framework\\": "src/Framework",
+      "Tests\\": "tests/"
     }
   },
   "require": {
-    "hypario/router": "^1.3",
     "http-interop/response-sender": "^1.0",
     "guzzlehttp/psr7": "^1.6",
-    "php-di/php-di": "^6.0",
+    "hypario/router": "^1.3",
+    "psr/http-server-middleware": "^1.0",
+    "twig/twig": "^2.11",
+    "hypario/container": "^1.0",
     "middlewares/whoops": "^1.2",
-    "ext-json": "*",
+    "php": ">=7.4.0",
     "ext-pdo": "*",
-    "ext-zip": "*",
-    "robmorgan/phinx": "^0.10.8"
+    "ext-json": "*",
+    "league/flysystem": "^1.0"
+  },
+  "require-dev": {
+    "robmorgan/phinx": "^0.11.1",
+    "phpunit/phpunit": "^8.3"
   }
 }
