--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "php": ">=7.4.0",
     "ext-pdo": "*",
     "ext-json": "*",
-    "league/flysystem": "^1.0"
+    "league/flysystem": "^1.0",
+    "christian-riesen/otp": "^2.6"
   },
   "require-dev": {
     "robmorgan/phinx": "^0.11.1",
