--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,10 @@
   },
   "require-dev": {
     "robmorgan/phinx": "^0.11.1",
-    "phpunit/phpunit": "^8.3"
+    "phpunit/phpunit": "^8.3",
+    "php-coveralls/php-coveralls": "^2.2"
+  },
+  "scripts": {
+    "coverage": "phpunit --color --coverage-html tmp/coverage"
   }
 }
