--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "ext-pdo": "*",
     "ext-json": "*",
     "league/flysystem": "^1.0",
-    "christian-riesen/otp": "^2.6"
+    "christian-riesen/otp": "^2.6",
+    "swiftmailer/swiftmailer": "^6.2"
   },
   "require-dev": {
     "robmorgan/phinx": "^0.11.1",
